# parallel_mandelbrot

./: CMakeLists.txt  README.md
src/: render.cpp  render.hpp  view.cpp
