cmake_minimum_required (VERSION 2.8)
project (ProgParallel)
option(PERSO "PERSO" OFF)
find_package(Threads REQUIRED)
find_package(benchmark REQUIRED)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_RELEASE_FLAGS "${CMAKE_CXX_RELEASE_FLAGS} -O3 -march=native ")
set(CMAKE_CXX_FLAGS "-mavx -msse4.2")
if (PERSO)
    find_package(PkgConfig REQUIRED)
    pkg_search_module(SDL2 REQUIRED sdl2)
    link_libraries(${SDL2_LDFLAGS})
else()
    find_package(SDL2 REQUIRED)
endif()
include_directories(lib/include)
include_directories(${SDL2_INCLUDE_DIRS})
add_library(renderer src/render.hpp src/render.cpp)
target_link_libraries(renderer tbb)
target_link_libraries(renderer ${SDL2_LIBRARIES} Threads::Threads)
add_executable(view src/view.cpp)
add_executable(bench src/bench.cpp)
target_link_libraries(view renderer)
target_link_libraries(bench renderer benchmark::benchmark)
